# bif

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  GETTING_STARTED.md  HOUDINI_EXPORT.md  MILESTONES.md  README.md  REFERENCE.md  SESSION_HANDOFF.md  USD_SETUP.md  setup_usd_env.ps1  test.ps1
.claude/agents/: vfx-code-reviewer.md
assets/: boxes_100.usda  boxes_100_proper.usda  cube.usd  lucy_100.usda  lucy_10000.usda  lucy_100_fixed.usda  lucy_900.usda  lucy_900_fixed.usda  lucy_low.usda  tall_box.usda  test_cube.usda  test_grid.usda  test_transform.usda
assets/lucy/: lucy_900.hip
assets/lucy/geo/: lucy_900.usd
assets/lucy/usd/assets/lucy/: geo.usdc  lucy.usd  mtl.usdc  payload.usdc
assets/ref_test/: cube.usda  ref_test.usda
cpp/usd_bridge/: CMakeLists.txt  usd_bridge.cpp  usd_bridge.h
crates/bif_core/: Cargo.toml  build.rs
crates/bif_core/examples/: load_usda.rs
crates/bif_core/src/: lib.rs  mesh.rs  scene.rs  texture.rs
crates/bif_core/src/usd/: cpp_bridge.rs  loader.rs  mod.rs  parser.rs  types.rs
crates/bif_math/: Cargo.toml
crates/bif_math/src/: aabb.rs  camera.rs  frustum.rs  interval.rs  lib.rs  ray.rs  transform.rs
crates/bif_render/: Cargo.toml
crates/bif_render/src/: lib.rs
crates/bif_renderer/: Cargo.toml  build.rs
crates/bif_renderer/examples/: simple_render.rs
crates/bif_renderer/src/: bucket.rs  bvh.rs  camera.rs  disney.rs  embree.rs  hittable.rs  instanced_geometry.rs  instanced_geometry_bvh.rs  lib.rs  material.rs  ray.rs  renderer.rs  sphere.rs  triangle.rs
crates/bif_viewer/: Cargo.toml
crates/bif_viewer/src/: main.rs
crates/bif_viewport/: Cargo.toml
crates/bif_viewport/src/: lib.rs  node_graph.rs  property_inspector.rs  scene_browser.rs
crates/bif_viewport/src/shaders/: basic.wgsl  fullscreen.wgsl  gnomon.wgsl
devlog/: DEVLOG_2025-01-09.md  DEVLOG_2025-12-27.md  DEVLOG_2025-12-27_milestone1.md  DEVLOG_2025-12-27_milestone2.md  DEVLOG_2025-12-27_milestone3.md  DEVLOG_2025-12-27_milestone4.md  DEVLOG_2025-12-27_milestone5_6.md  DEVLOG_2025-12-27_milestone7_8.md  DEVLOG_2025-12-30_milestone10.md  DEVLOG_2025-12-30_milestone11.md  DEVLOG_2025-12-30_milestone9.md  DEVLOG_2025-12-31_freeze-fix.md  DEVLOG_2026-01-01_milestone12.md  DEVLOG_2026-01-04_milestone13.md  DEVLOG_2026-01-05_milestone13a.md  DEVLOG_2026-01-06_milestone13b.md  DEVLOG_2026-01-08_blank-scene-fix.md  DEVLOG_2026-01-09.md  DEVLOG_2026-01-10.md  DEVLOG_2026-01-11.md  DEVLOG_2026-01-16.md  README.md
