[package]
name = "bif_renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CPU path tracing renderer for BIF"

[dependencies]
bif_core = { path = "../bif_core" }
bif_math = { path = "../bif_math" }
glam.workspace = true
rand = "0.8"
rayon = "1.10"
image = "0.24"
log.workspace = true
