[package]
name = "bif_viewer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
default-run = "bif_viewer"

[dependencies]
bif_math = { path = "../bif_math" }
bif_core = { path = "../bif_core" }
bif_viewport = { path = "../bif_viewport" }

wgpu = { workspace = true }
winit = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
pollster = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
